# AirPlay-Receiver

./: .gitignore  .gitmodules  CMakeLists.txt  CONTEXT.md  LICENSE  README.md
cmake/: UxPlayDependency.cmake
config/: portable-runtime-manifest.txt
scripts/: build.ps1  launcher.cmd  run.ps1  verify-portable-package.ps1
src/app/: AppSettings.cpp  AppSettings.h  AppSettingsStore.cpp  AppSettingsStore.h  D3D11VideoRenderer.cpp  D3D11VideoRenderer.h  MainWindow.cpp  MainWindow.h  SettingsChangeDeferrer.cpp  SettingsChangeDeferrer.h  SettingsDialog.cpp  SettingsDialog.h  ShortcutAction.h  ShortcutActionKey.cpp  ShortcutActionKey.h  ShortcutBinding.h  ToolbarWidget.cpp  ToolbarWidget.h  VideoRenderGeometry.cpp  VideoRenderGeometry.h  VideoSurfaceWidget.cpp  VideoSurfaceWidget.h  WindowStateStore.cpp  WindowStateStore.h  app-icon.rc  app_resources.qrc  main.cpp
src/backend/: AirPlayReceiver.h  DiscoveryRestartController.cpp  DiscoveryRestartController.h  FakeAirPlayReceiver.h  GstAppSinkFrameSource.cpp  GstAppSinkFrameSource.h  ReceiverConfigurationChange.cpp  ReceiverConfigurationChange.h  ReceiverState.h  ReceiverStatePolicy.cpp  ReceiverStatePolicy.h  UxPlayCallbackDispatch.cpp  UxPlayCallbackDispatch.h  UxPlayDiscovery.cpp  UxPlayDiscovery.h  UxPlayReceiver.cpp  UxPlayReceiver.h  VideoFrameBridge.cpp  VideoFrameBridge.h  VideoQualitySettings.h
src/platform/: AspectRatioSizing.cpp  AspectRatioSizing.h  DependencyDiagnostics.cpp  DependencyDiagnostics.h  FakeHotkeyService.h  HotkeyService.h  MdnsPublisher.cpp  MdnsPublisher.h  MdnsPublishing.h  WindowsHotkeyService.cpp  WindowsHotkeyService.h  WindowsWindowBehavior.cpp  WindowsWindowBehavior.h
tests/: CMakeLists.txt
tests/app/: AppSettingsStoreTest.cpp  AppSettingsTest.cpp  D3D11VideoRendererTest.cpp  MainWindowSmokeTest.cpp  SettingsChangeDeferrerTest.cpp  SettingsDialogTest.cpp  ShortcutActionKeyTest.cpp  ToolbarWidgetTest.cpp  VideoRenderGeometryTest.cpp  VideoSurfaceWidgetTest.cpp  WindowStateStoreTest.cpp
tests/backend/: AirPlayReceiverTest.cpp  DiscoveryRestartControllerTest.cpp  ReceiverStatePolicyTest.cpp  UxPlayDiscoveryTest.cpp  UxPlayReceiverConfigTest.cpp  VideoFrameBridgeTest.cpp  VideoRendererLifecycleTest.cpp
tests/platform/: AspectRatioSizingTest.cpp  DependencyDiagnosticsTest.cpp  HotkeyServiceTest.cpp  MdnsPublisherTest.cpp  WindowsWindowBehaviorTest.cpp
tests/scripts/: PortablePackageValidationTest.ps1  RunScriptTest.ps1
