add_executable(MainWindowSmokeTest app/MainWindowSmokeTest.cpp)
target_link_libraries(MainWindowSmokeTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME MainWindowSmokeTest COMMAND MainWindowSmokeTest)

add_executable(AppSettingsTest app/AppSettingsTest.cpp)
target_link_libraries(AppSettingsTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME AppSettingsTest COMMAND AppSettingsTest)

add_executable(AppSettingsStoreTest app/AppSettingsStoreTest.cpp)
target_link_libraries(AppSettingsStoreTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME AppSettingsStoreTest COMMAND AppSettingsStoreTest)

add_executable(ToolbarWidgetTest app/ToolbarWidgetTest.cpp)
target_link_libraries(ToolbarWidgetTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME ToolbarWidgetTest COMMAND ToolbarWidgetTest)

add_executable(SettingsDialogTest app/SettingsDialogTest.cpp)
target_link_libraries(SettingsDialogTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME SettingsDialogTest COMMAND SettingsDialogTest)

add_executable(HotkeyServiceTest platform/HotkeyServiceTest.cpp)
target_link_libraries(HotkeyServiceTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME HotkeyServiceTest COMMAND HotkeyServiceTest)

add_executable(DependencyDiagnosticsTest platform/DependencyDiagnosticsTest.cpp)
target_link_libraries(DependencyDiagnosticsTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME DependencyDiagnosticsTest COMMAND DependencyDiagnosticsTest)

add_executable(AirPlayReceiverTest backend/AirPlayReceiverTest.cpp)
target_link_libraries(AirPlayReceiverTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME AirPlayReceiverTest COMMAND AirPlayReceiverTest)

add_executable(UxPlayReceiverConfigTest backend/UxPlayReceiverConfigTest.cpp)
target_link_libraries(UxPlayReceiverConfigTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME UxPlayReceiverConfigTest COMMAND UxPlayReceiverConfigTest)

add_executable(VideoSurfaceWidgetTest app/VideoSurfaceWidgetTest.cpp)
target_link_libraries(VideoSurfaceWidgetTest PRIVATE airplay_app_lib Qt6::Test)
add_test(NAME VideoSurfaceWidgetTest COMMAND VideoSurfaceWidgetTest)
